Persistence of Java visitor objects. First Working JavaCrawler.